--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <html>
-    <head>
-        <title>Russel</title>
-    </head>    
-    <body>
-        <div style = "color: #0000FA">
-            <h3>About Me:</h3>
-        </div>
-    <p>
-        <strong>Hi! I'm Russel! I like:</strong>
-        <ul>
-            <li>Eating</li>
-            <li>Playing Games</li>
-            <li>Watching Anime</li>
-            <li>Being lazy</li>
-        </ul>
-    </body>
-    <p>
-        <br>I AM A NORMAL PERSON I SWEAR
-    </p>
+    <style>
+        body {background-color:#D6DAF0
+        }
+    </style>
+    <font color=#c41e3a font face="Arial">    
+        <body>
+            <center>
+                <div class="boardBanner">
+                    <a href="#">
+                        <img class="title" style="width:300px" src="Not%20a%20Weeb.png">
+                    </a>
+                    <p>
+                        <font size="+4">
+                            <strong>/potato/ - Russel</strong>
+                        </font>
+                    </p>
+                    <div>
+                        <h2>Russel Rivera's site of normalness.</h2>
+                        <br>    
+                        <h1 title ="Wow, I probably eat too much.">Food</h1>
+                        <h1 title ="Wow, maybe might spent too much time on my computer.">Games</h1>
+                        <h1 title ="I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM ">Anime</h1>
+                        <form action="/action_page.php">
+  First name: <input type="text" name="fname"><br>
+  <input type="image" src="submit.gif" alt="Submit">
+</form>
+Try it Yourself »
+
+                    </div>
+                </div>
+                <hr>
+            </center>
+        </body>
+    </font>
 </html>
