--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <html>
-    <style>
-        body {background-color:#D6DAF0
-        }
-    </style>
-    <font color=#c41e3a font face="Arial">    
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>    
         <body>
+<!--
             <center>
                 <div class="boardBanner">
                     <a href="#">
                         <img class="title" style="width:300px" src="Not%20a%20Weeb.png">
                     </a>
-                    <p>
-                        <font size="+4">
+                    <p id="potatoRussel">
                             <strong>/potato/ - Russel</strong>
-                        </font>
                     </p>
                     <div>
                         <h2>Russel Rivera's site of normalness.</h2>
@@ -21,16 +18,32 @@
                         <h1 title ="Wow, I probably eat too much.">Food</h1>
                         <h1 title ="Wow, maybe might spent too much time on my computer.">Games</h1>
                         <h1 title ="I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM I DON'T HAVE A PROBLEM ">Anime</h1>
-                        <form action="/action_page.php">
-  First name: <input type="text" name="fname"><br>
-  <input type="image" src="submit.gif" alt="Submit">
-</form>
-Try it Yourself »
-
                     </div>
                 </div>
                 <hr>
-            </center>
+                
+-->
+            <div class="padding">    
+            <h1 class="blue">
+                    <h1class:"blue">CSS STUFF</h1class:></h1>
+            <h1>CSS w/o Class</h1>
+            <h1 class="blue">CSS With Class"
+                </h1>
+            </div>    
+             <div>    
+            <h1 class="blue">
+                    <h1class:"blue">CSS STUFF</h1class:></h1>
+            <h1>CSS w/o Class</h1>
+            <h1 class="blue">CSS With Class"
+                </h1>
+            </div>    
+            <ul>
+                <li>yes</li>
+                <li class="green">yes</li>
+                <li>yes</li>
+                <li>ahn</li>
+                <li class="green">yes</li>
+            </ul>
+<!--            </center>-->
         </body>
-    </font>
 </html>
