--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function getRandomImage(imgAr, path) {
 path = path || 'images/'; 
 var num = Math.floor(Math.random() * imgAr.length);
 var img = imgAr[ num ];
-var imgStr = '<img src="' + path + img + '" alt = "" width = "50%">';
+var imgStr = '<img src="https://raw.githubusercontent.com/RusselRivera/RusselRivera.github.io/master/' + path + img + '" alt = "" width = "50%">';
 document.write(imgStr); document.close();
 }</script>
                 <div class=bottom>
